FIX all password reset worklow templates

--- a/templates/accounts/password_reset.html
+++ b/templates/accounts/password_reset.html
@@ -4,12 +4,16 @@
 
 {% block main %}
 
+<div class="page-header">
+    <h2>{% trans "Password reset" %}</h2>
+</div>
+
 <form method="post" class="form" enctype="multipart/form-data" >
   {% csrf_token %}
 
   {% bootstrap_form form %}
 
-  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Login" %}">
+  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Send Reset Link" %}">
 </form>
 
 {% endblock %}
