--- a/templates/accounts/password_reset_email.html
+++ b/templates/accounts/password_reset_email.html
@@ -2,19 +2,19 @@
 {% autoescape off %}
 
 
-{% translate "You are receiving this message because you asked for a password reset at BTX Exchange website." %}
+{% trans "You are receiving this message because you asked for a password reset at Nexchange website." %}
 
-{% translate "Please, follow the link below to create a new password:{% block reset_link" %}
+{% trans "Please, follow the link below to create a new password:" %} {% block reset_link %}
 
 {{ protocol }}://{{ domain }}{% url 'accounts.password_reset_confirm' uidb64=uid token=token %}
 
 
 {% endblock %}
 
-{% translate "In case you have forgot, your username is" %} "{{ user.get_username }}"
+{% trans "In case you have forgot, your username is" %} "{{ user.get_username }}"
 
 
-{% translate "Regards, team  BTX Exchange" %}
+{% trans "Regards, team  Nexchange" %}
 
 {% endautoescape %}
 
