--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -1,10 +1,12 @@
-{% extends "registration/registration_base.html" %}
+{% extends "core/base.html" %}
 {% load i18n %}
 
 
 
-{% block formcontent %}
-<h2>Password reseted</h2>
+{% block main %}
+<div class="page-header">
+    <h2>Password reseted</h2>
+</div>
 <p class="alert alert-success">
     {% trans 'Your password has been reset.' %}
     {% trans 'You can now login using this new password.' %}
