--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -1,19 +1,21 @@
-{% extends "registration/registration_base.html" %}
+{% extends "core/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
 
 
-{% block formcontent %}
+{% block main %}
 
 
-<h2>{% translate "Define new password" %}</h2>
-<p>{% translate "Fill in the form with your new password to complete the process:" %}</p>
+<div class="page-header">
+    <h2>{% trans "Define new password" %}</h2>
+</div>
 
+<p>{% trans "Fill in the form with your new password to complete the process:" %}</p>
 
 <form method="post" action="">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% translate "Define new password" %}">
+    <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Define new password" %}">
 </form>
 {% endblock %}
 
