Fix add invoice number to okpay_payment task

--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -51,6 +51,7 @@
                        <input type="hidden" name="ok_item_1_name" value="{{ unique_ref }}"/>
                        <input type="hidden" name="ok_item_1_price" value="{{ amount_cash}}"/>
                        <input type="hidden" name="ok_currency" value="{{ order.currency.name}}"/>
+                       <input type="hidden" name="ok_invoice" value="{{ unique_ref }}"/>
                        <input type="hidden" name="ok_fees" value="1"/>
                        <input type="image" class="payment-icon"
                               name="submit" alt="OKPAY Payment"
