--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+
 {# Load the tag library #}
 {% load bootstrap3 %}
 {% load staticfiles %}
@@ -12,7 +14,6 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -140,6 +141,7 @@
     {% bootstrap_javascript %}
     {% block extra_js_footer %} {% endblock %}
     <script src="{% static 'dist/js/bundle.js' %}"></script>
+    <script src="//load.sumome.com/" data-sumo-site-id="0479b2a397da63065d289a062ad14c86740819d9c571f111c2e0aadc4a3fd404" async="async"></script>
 
 </body>
 </html>
