--- a/templates/payments/partials/modals/card.html
+++ b/templates/payments/partials/modals/card.html
@@ -9,7 +9,7 @@
                 <span class="helper"></span>
                 <img src="{% static icon %}"
                      alt="{% trans label %}"
-                     class="payment-method-icon">
+                     class="payment-method-icon {{ card_type }}">
         </div>
         <div class="col col-xs-12">
             <div class="payment-label">
