--- a/templates/payments/partials/modals/payment_options.html
+++ b/templates/payments/partials/modals/payment_options.html
@@ -6,8 +6,8 @@
     <div class="payment_title">
         {% trans 'Credit cards' %}
     </div>
-    {% include 'payments/partials/modals/card.html' with card_type='PayPal' label='Visa' icon='icons/small/visa.png' card=cards.paypal %}
-    {% include 'payments/partials/modals/card.html' with card_type='PayPal' label='Mastercard' icon='icons/small/mastercard.png' card=cards.paypal %}
+    {% include 'payments/partials/modals/card.html' with card_type='visa' label='Visa' icon='icons/small/visa.png' card=cards.okpay %}
+    {% include 'payments/partials/modals/card.html' with card_type='mastercard' label='Mastercard' icon='icons/small/mastercard.png' card=cards.payeer %}
 </div>
 {% endif %}
 
@@ -20,10 +20,10 @@
     {% include 'payments/partials/modals/card.html' with card_type='okpay' label='OK Pay' icon='icons/small/okpay.png' card=cards.okpay %}
     {% if type == 'buy' %}
         {% include 'payments/partials/modals/card.html' with card_type='payeer' label='Payeer Wallet' icon='icons/small/payeer.png' card=cards.payeer %}
-        {% include 'payments/partials/modals/card.html' with card_type='Robokassa' icon='icons/small/robokass.png' card=cards.robokass %}
+        {% include 'payments/partials/modals/card.html' with card_type='robokass' icon='icons/small/robokass.png' card=cards.robokass %}
     {% endif %}
-    {% include 'payments/partials/modals/card.html' with card_type='PayPal' label='PayPal' icon='icons/small/paypal.png' card=cards.paypal %}
-    {% include 'payments/partials/modals/card.html' with card_type='Skrill' label='Skrill' icon='icons/small/skrill.png' card=cards.skrill %}
+    {% include 'payments/partials/modals/card.html' with card_type='paypal' label='PayPal' icon='icons/small/paypal.png' card=cards.paypal %}
+    {% include 'payments/partials/modals/card.html' with card_type='skrill' label='Skrill' icon='icons/small/skrill.png' card=cards.skrill %}
 
 </div>
 <div class="row {{ type }} row_type">
@@ -31,14 +31,14 @@
         {% trans 'Bank'%}
     </div>
     {% if type == 'buy' %}
-        {% include 'payments/partials/modals/card.html' with card_type='Alfa Bank' label='Alfa-Bank' icon='icons/small/alfabank.png' card=cards.alfa %}
-        {% include 'payments/partials/modals/card.html' with card_type='Sberbank' label='Sberbank' icon='icons/small/sber.png' card=cards.sber %}
-        {% include 'payments/partials/modals/card.html' with card_type='Sepa' label='Sepa' icon='icons/small/sepa.png'  card=cards.alfa %}
-        {% include 'payments/partials/modals/card.html' with card_type='Swift' label='Swift' icon='icons/small/swift.png' card=cards.alfa %}
+        {% include 'payments/partials/modals/card.html' with card_type='alfa-bank' label='Alfa-Bank' icon='icons/small/alfabank.png' card=cards.alfa %}
+        {% include 'payments/partials/modals/card.html' with card_type='sbernank' label='Sberbank' icon='icons/small/sber.png' card=cards.sber %}
+        {% include 'payments/partials/modals/card.html' with card_type='sepa' label='Sepa' icon='icons/small/sepa.png'  card=cards.alfa %}
+        {% include 'payments/partials/modals/card.html' with card_type='swift' label='Swift' icon='icons/small/swift.png' card=cards.alfa %}
     {% else %}
         {% include 'payments/partials/modals/card.html' with card_type='c2c' label='Card 2 Card' icon='icons/small/c2c.ico' %}
         {% include 'payments/partials/modals/card.html' with card_type='Sepa' label='Sepa' icon='icons/small/sepa.png' %}
-        {% include 'payments/partials/modals/card.html' with card_type='Swift' label='Swift' icon='icons/small/swift.png'%}
+        {% include 'payments/partials/modals/card.html' with card_type='seift' label='Swift' icon='icons/small/swift.png'%}
     {% endif %}
 {# ALFA BANK cash deposit #}
 {#    {% include 'payments/partials/modals/card.html' with card_type='Cash' label='Cash' icon='icons/small/cash.png' card=cards.alfa %}#}
