--- a/templates/payments/partials/modals/payment_options.html
+++ b/templates/payments/partials/modals/payment_options.html
@@ -38,7 +38,7 @@
     {% else %}
         {% include 'payments/partials/modals/card.html' with card_type='c2c' label='Card 2 Card' icon='icons/small/c2c.ico' %}
         {% include 'payments/partials/modals/card.html' with card_type='Sepa' label='Sepa' icon='icons/small/sepa.png' %}
-        {% include 'payments/partials/modals/card.html' with card_type='seift' label='Swift' icon='icons/small/swift.png'%}
+        {% include 'payments/partials/modals/card.html' with card_type='swift' label='Swift' icon='icons/small/swift.png'%}
     {% endif %}
 {# ALFA BANK cash deposit #}
 {#    {% include 'payments/partials/modals/card.html' with card_type='Cash' label='Cash' icon='icons/small/cash.png' card=cards.alfa %}#}
