--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -65,7 +65,7 @@
                 {% if user.username %}
                     {{ user.username }}
                 {% else %}
-                    {{ user.profile.phone_number }}
+                    {{ user.profile.phone }}
                 {% endif %}
             </a>
             | <a href="{% url 'accounts.logout' %}">
