--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -683,7 +683,37 @@ div.payment-label {
    }
 }
 
-@media screen and (max-width:600px) { }
+@media screen and (max-width:600px) {
+    .input-group-addon:last-child {
+        display: inline-block;
+        width: 100%;
+        margin: 0 10px;
+        border-radius: 2px;
+        border: 1px solid #E3E3E3;
+    }
+
+    .payment-type-trigger .payment-trigger-image img.payment-method-icon {
+        max-width: 100px;
+        text-align: center;
+        margin: auto;
+    }
+
+
+    .payment-label-inner {
+        font-size: 12px;
+    }
+    .round-button {
+        width: 15px;
+        height: 15px;
+    }
+
+    .round-button a {
+        position: absolute;
+        top: 3px;
+        left: 6px;
+        font-size: 12px;
+    }
+}
 
 @media screen and (max-width:550px) {
 
