Feature/encapsulate data (#180)
* stop annying emails, add uphold btc card param to env

* encaps data

* more stuff

* remove wercker from data

* remove wercker from data

* make order buy work

* fix the damn tests

* fix damn tests, damn css and javascripts

--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1093,9 +1093,12 @@ body #nprogress .spinner-icon {
     margin: 0 auto;
 }
 .cms_header, .page-header{
-    display: inline-block;
     font-size: 32px;
     border:0;
+}
+
+.cms_header{
+    display: inline-block;
 }
 
 .register .controls {
