--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -6,7 +6,7 @@
 {% block main %}
     <div class="page-header">
         <h1>
-            {% trans "BTC - Exchange" %} <small>{% trans "User Profile" %}</small>
+            <small>{% trans "User Profile" %}</small>
         </h1>
     </div>
 
