--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -4,7 +4,7 @@
 {% block main %}
 	<div class="page-header">
 		<h1>
-			{% trans "BTC - Exchange" %} <small> </small>
+			{% trans "Nexchange" %}
 		</h1>
 	</div>
 
