--- a/templates/accounts/registration_base.html
+++ b/templates/accounts/registration_base.html
@@ -9,7 +9,7 @@
 
 <div class="page-header">
   <h1>
-    {% trans "BTC - Exchange" %}
+    {% trans "Nexchange" %}
       <small>{% translate "Password reset" %}</small>
   </h1>
 </div>
