--- a/templates/accounts/user_registration.html
+++ b/templates/accounts/user_registration.html
@@ -5,7 +5,7 @@
 {% block main %}
 <div class="page-header">
   <h1>
-    {% trans "BTC - Exchange" %} <small>{% trans "User Registration" %}</small>
+    <small>{% trans "Register" %}</small>
   </h1>
 </div>
 
