--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -105,6 +105,42 @@
    <link rel="stylesheet" href="{% static 'bower_components/nprogress/nprogress.css' %}">
    {% include 'session_security/all.html' %}
     <script>
+        window.getLockOutText = function (data) {
+            if (!data.responseJSON.cooloff_time) {
+                return false;
+            }
+            var refreshTimtout = 5,
+                countDownUnit = 1;
+
+            setTimeout(
+                function () {
+                    window.location.reload();
+                }, refreshTimtout * 1000
+            )
+            
+            setInterval(function () {
+                var countDown = $("#refresh_count"),
+                    current = parseInt(countDown.text());
+                countDown.text(current - 1)
+                    countDown.val()
+            }, countDownUnit * 1000);
+
+            var formattedTime = data
+                    .responseJSON
+                    .cooloff_time
+                    .replace("PT","")
+                    .replace("H",":")
+                    .replace("M","")
+                    .replace("S",""),
+                errorMsg = gettext('You were locked out, please try again in '),
+                refreshMsg = 'Refreshing in <span id="refresh_count">' + 5 + '</span>',
+                completeMsg = errorMsg +
+                formattedTime + ' ' +
+                gettext('minutes') + '<br>' +
+                refreshMsg;
+                return completeMsg;
+         };
+
         window.countryCode = '{{COUNTRY_CODE}}';
         window.recaptchaSitekey = '{{ RECAPTCHA_SITEKEY }}'
         $( document ).ready(function() {
