--- a/templates/orders/partials/orders_header.html
+++ b/templates/orders/partials/orders_header.html
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-xs-2">
         <a href="{% url 'orders.add_order' %}">
-            <button type="button" class="btn-success new-order" > {% trans "New" %}</button>
+            <button type="button" class="btn btn-success" > {% trans "New Order" %}</button>
         </a>
     </div>
     <div class="col-xs-10" >
