--- a/templates/payments/partials/modals/sell.html
+++ b/templates/payments/partials/modals/sell.html
@@ -39,7 +39,7 @@
                 {% include 'payments/partials/forms/'|add:form|add:'.html' with legend=legend %}
                 <div class="row">
                     <div class="col-sm-9 col-sm-offset-1 text-left">
-                        <span class="btn btn-primary save save-card">{% trans "Save card" %}</span>
+                        <span class="btn btn-primary save save-card">{% trans "Save & Continue" %}</span>
                     </div>
                 </div>
             </div>
