Feature/modular tasks multi ticket multi currencies (#189)
* WIP: Order status Choices instead of booleans -  unit tests pass

* WIP: Order status Choices instead of booleans -  Ctrl-F old fields + monkey testing

* WIP: Order status Choices instead of booleans -  fix sell_order_release test cases

* WIP: add order_type EXCHANGE, help_text's to order 'choice' fileds

* WIP: add order_type EXCHANGE, help_text's to order 'choice' fileds: validators and tests

* WIP: from/to currencies and amounts on Order: pass unit test

* WIP: from/to currencies and amounts on Order: possible to autopay with Okpay and Payeer. bugs with ticker

* WIP: add all fiat models rates, prices from fixer to Price model

* Kraken ticker for BTC-LTC BTC-ETH prices

* WIP: changeg Ticker, Pair modules, Price renewed. Tests failing

* WIP: select2 + pk instead of ORM object in the celery task kawargs

* 3 feature branches merged with passing tests

* increase lock cool-off time in tests so wercker wont complain (hopefully)

--- a/templates/orders/partials/forms/payment_toggle.html
+++ b/templates/orders/partials/forms/payment_toggle.html
@@ -12,7 +12,7 @@
             data-pk="{{order.pk}}"
             data-offstyle="danger"
             data-onstyle="success"
-            {% if order.is_paid %}
+            {% if order.status >= order.PAID %}
                 checked
             {% endif %}
             {% if order.frozen %}
