--- a/templates/orders/partials/order_row_desktop.html
+++ b/templates/orders/partials/order_row_desktop.html
@@ -2,18 +2,18 @@
     <tr>
         <td>{{ order.created_on |date:"D d M Y"}}</td>
         <td>{{ order.unique_reference }}</td>
-        <td>{{ order.currency.code }}</td>
-        <td>{{ order.amount_cash }}</td>
-        <td>{{ order.amount_btc }}</td>
+        <td>{{ order.pair.name }}</td>
+        <td>{{ order.amount_quote }}</td>
+        <td>{{ order.amount_base }}</td>
         <td>
         {% include 'orders/partials/forms/payment_toggle.html' %}
         </td>
-        {% if order.is_released == 1 %}
+        {% if order.status >= order.RELEASED %}
         <td><img src="/static/icons/check_16.png"></td>
         {% else %}
         <td><img src="/static/icons/close_16.png"></td>
         {% endif %}
-        {% if order.is_completed == 1 %}
+        {% if order.status == order.COMPLETED %}
         <td><img src="/static/icons/check_16.png"></td>
         {% else %}
         <td><img src="/static/icons/close_16.png"></td>
