--- a/templates/orders/partials/orders_desktop.html
+++ b/templates/orders/partials/orders_desktop.html
@@ -4,9 +4,9 @@
     <tr class="table-order">
         <th >{% trans "Date" %}</th>
         <th>{% trans "Reference" %}</th>
-        <th>{% trans "Currency" %}</th>
-        <th>{% trans "Amount" %}</th>
-        <th>{% trans "BTC" %}</th>
+        <th>{% trans "Pair" %}</th>
+        <th>{% trans "Price" %}</th>
+        <th>{% trans "Volume" %}</th>
         <th>{% trans "Paid" %}</th>
         <th>{% trans "Released" %}</th>
         <th>{% trans "Completed" %}</th>
