--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -101,7 +101,18 @@
     <script src="{% static 'js/index_orders.js' %}"></script>
     <link href="{% static 'bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
     <script src="{% static 'bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js' %}"></script>
-   <script src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
+    <script
+            src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+    <script
+         src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".js-example-basic-single").select2();
+        });
+    </script>
+
    <link rel="stylesheet" href="{% static 'bower_components/nprogress/nprogress.css' %}">
    {% include 'session_security/all.html' %}
     <script>
