--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -106,10 +106,10 @@
     <link
             href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <script
-         src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+         src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.full.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
-            $(".js-example-basic-single").select2();
+            $(".select2").select2();
         });
     </script>
 
