--- a/templates/payments/partials/forms/phone.html
+++ b/templates/payments/partials/forms/phone.html
@@ -1,3 +1,5 @@
+{% extends 'payments/partials/forms/base_from.html' %}
+{% block form %}
 {% load i18n %}
 <form action="/">
     <div class="row">
@@ -9,3 +11,4 @@
         </div>        
     </div>
 </form>
+{% endblock %}
