--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -101,6 +101,8 @@
     <script src="{% static 'js/index_orders.js' %}"></script>
     <link href="{% static 'bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
     <script src="{% static 'bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js' %}"></script>
+   <script src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
+   <script src="{% static 'js/modules/lib/iban.js' %}"></script>
     <script
             src="{% static 'bower_components/nprogress/nprogress.js' %}"></script>
     <link
