--- a/templates/orders/partials/modals/order_success_sell.html
+++ b/templates/orders/partials/modals/order_success_sell.html
@@ -8,7 +8,9 @@
         <h1>{% trans 'Order placed successfully' %}</h1>
         <div class="row">
             <div class="col col-xs-12">
-                {% trans 'Please send bitcoin to the following address' %}
+                {% trans 'Please send' %}
+                {{ order.amount_base}} {{ order.currency_to}}
+                {% trans 'to the following address' %}
             </div>
         </div>
         <div class="row">
@@ -18,15 +20,11 @@
                 </div>
             </div>
            <div class="col col-xs-12">
-                <span class="btn btn-success" title="{% trans 'Copy' %}">
+                <span class="btn btn-success expand" title=
+                        "{% trans 'Copy' %}">
                     <i class="fa fa-copy"></i>
                     <strong>{{address}}</strong>
                 </span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col col-xs-12">
-                {% trans 'Please send bitcoin to the following address' %}
             </div>
         </div>
         <div class="row">
