--- a/templates/orders/partials/modals/success_order.html
+++ b/templates/orders/partials/modals/success_order.html
@@ -42,7 +42,13 @@
                     {% trans 'Go to Robokassa' %}
                 </a>
             {% else %}
-                <a href="{% url 'orders.orders_list' %}?oid={{ order.pk }}" class="btn btn-success">{% trans 'Get your bitcoins' %}</a>
+                <a href="{% url 'orders.orders_list' %}?oid={{ order.pk }}" class="btn btn-success">
+                    {%  if order.is_buy %}
+                        {% trans 'Get your bitcoins' %}
+                    {% else %}
+                        {% trans 'Done' %}
+                    {% endif %}
+                </a>
             {% endif %}
         </div>
       </div>
