--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -74,9 +74,12 @@
     <div class="paymentSelectionContainer">
     </div>
     {% include 'payments/partials/modals/sell.html' with id="c2cSellModal" form="card" legend="Get pay with card to card transfer" icon="icons/small/c2c.ico" %}
-    {% include 'payments/partials/modals/sell.html' with id="paypalSellModal" form="email" legend="Get paid with PayPal" icon="icons/small/paypal.png" %}
-    {% include 'payments/partials/modals/sell.html' with id="qiwiSellModal" form="phone" legend="Get paid with Qiwi Wallet" icon="icons/small/qiwi.png" %}
-    {% include 'payments/partials/modals/sell.html' with id="sepaSellModal" form="iban" legend="Get paid using a SEPA trasnfer" icon="icons/small/sepa.png" %}
-    {% include 'payments/partials/modals/sell.html' with id="swiftSellModal" form="swift" swift_fields="true" legend="Get paid using a SWIFT transfer" icon="icons/small/swift.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="paypalSellModal" method="paypal" form="email" legend="Get paid with PayPal" icon="icons/small/paypal.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="skrillSellModal" method="skrill" form="email" legend="Get paid with Skrill" icon="icons/small/skrill.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="qiwiSellModal" method="qiwi" form="phone" legend="Get paid with Qiwi Wallet" icon="icons/small/qiwi.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="sepaSellModal" form="iban" method="sepa" legend="Get paid using a SEPA trasnfer" icon="icons/small/sepa.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="swiftSellModal" form="swift" method="swift" legend="Get paid using a SWIFT transfer" icon="icons/small/swift.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="okpaySellModal" method="okpay" form="email" legend="Get paid to your OkPay wallet" icon="icons/small/okpay.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="payeerSellModal" method="payeer" form="email" legend="Get paid to your Payeer wallet" icon="icons/small/payeer.png" %}
 
 {% endblock %}
