--- a/templates/payments/partials/forms/email.html
+++ b/templates/payments/partials/forms/email.html
@@ -1,4 +1,6 @@
+{% extends 'payments/partials/forms/base_from.html' %}
 {% load i18n %}
+{% block form %}
 <form action="">
     <div class="row">
         <div class="col col-lg-10 col-sm-offset-1 text-left">
@@ -22,3 +24,4 @@
         </div>
     </div>
 </form>
+{% endblock %}
