--- a/templates/payments/partials/modals/sell.html
+++ b/templates/payments/partials/modals/sell.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 {% endif %}
-                {% include 'payments/partials/forms/'|add:form|add:'.html' with legend=legend %}
+                {% include 'payments/partials/forms/'|add:form|add:'.html' with legend=legend method=method %}
                 <div class="row">
                     <div class="col-sm-9 col-sm-offset-1 text-left">
                         <span class="btn btn-primary save save-card">{% trans "Save & Continue" %}</span>
