--- a/templates/orders/partials/orders_desktop.html
+++ b/templates/orders/partials/orders_desktop.html
@@ -2,6 +2,7 @@
 <div class="table-responsive visible-md visible-lg">
   <table class=" table-hover table-condensed col-lg-12">
     <tr class="table-order">
+        <th >{% trans "Type" %}</th>
         <th >{% trans "Date" %}</th>
         <th>{% trans "Reference" %}</th>
         <th>{% trans "Pair" %}</th>
