--- a/templates/orders/partials/order_row_mobile.html
+++ b/templates/orders/partials/order_row_mobile.html
@@ -1,65 +1,88 @@
 {% load i18n %}
-<div id="{{ order.unique_reference}}" class="headers-mobile panel-heading">
-    {% if order.is_buy %}
-        {% trans 'Buying' %}
-    {% else %}
-        {% trans 'Selling' %}
-    {% endif %}
-    {{ order.amount_btc }} BTC {{ order.created_on |date:"D d M Y"}}
-    <a class="pull-right" data-toggle="collapse" data-parent="{{ order.unique_reference}}" href="#body-{{ order.unique_reference}}">
-        {% trans "details" %}
-    </a>
-</div>
-<div id="body-{{ order.unique_reference}}" class="panel-body panel-collapse collapse">
+<a data-toggle="collapse" data-parent="{{ order.unique_reference}}" href="#body-{{ order.unique_reference}}">
+    <div id="{{ order.unique_reference}}" class="headers-mobile panel-heading">
 
-    <div class="row">
+            {% if order.is_buy %}
+                <span class="btn btn-success btn-small mobile-trade-indicator">
+                    {% trans 'Buying' %}
+                </span>
+            {% else %}
+                <span class="btn btn-danger btn-small mobile-trade-indicator">
+                    {% trans 'Selling' %}
+                </span>
+            {% endif %}
+            {{ order.amount_base| floatformat }} {{ order.pair.base.code }}
+            <span class="pull-right mobile-date">
+             {{ order.created_on |date:"D d M Y"}}
+            </span>
+    </div>
+</a>
+
+<div id="body-{{ order.unique_reference}}" class="panel-body panel-collapse collapse">
+    <div class="mobile-row">
       <div class = "headers-mobile header-text">
         {% trans "Reference" %}
       </div>
         {{ order.unique_reference }}
     </div>
 
-    <div>
+    <div class="mobile-row">
         <div class = "headers-mobile header-text">{% trans "Pair" %}</div>
         {{ order.pair.name }}
     </div>
 
-    <div>
+    <div class="mobile-row">
         <div class = "headers-mobile header-text">{% trans "Price" %}</div>
-        {{ order.amount_quote }}
+        {{ order.amount_quote|floatformat:2}}
     </div>
-    <div>
+    <div class="mobile-row">
         <div class = "headers-mobile header-text">{% trans "Volume" %}</div>
-        {{ order.amount_base }}
+        {{ order.amount_base|floatformat }}
     </div>
 
+    <div class="mobile-row">
+          <span id="spin_confirming_{{order.pk}}" style="display:none">
+            <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;
+               {% trans "Setting as paid..." %}
+          </span>
 
-      <span id="spin_confirming_{{order.pk}}" style="display:none">
-        <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;
-           {% trans "Setting as paid..." %}
-    </span>
-
-    <div class = "headers-mobile header-text">
-        {% trans "Paid" %}
-    </div>
-
+        <div class = "headers-mobile header-text">
+            {% trans "Paid" %}
+        </div>
         {% include 'orders/partials/forms/payment_toggle.html' %}
-
-    <div class = "headers-mobile">
-        {% trans "Released" %}
-        {% include 'orders/partials/released_indicator.html' %}
-    </div>
-    <div class = "headers-mobile">
-        {% trans "Completed" %}
-        {% include 'orders/partials/completed_indciator.html' %}
     </div>
 
-    <div class = "headers-mobile header-text">
-    {% trans "Withdraw Address" %}
+    <div class="mobile-row">
+        <div class = "headers-mobile header-text">
+            {% trans "Released" %}
+        </div>
+        <div class="header-text">
+            {% include 'orders/partials/released_indicator.html' %}
+        </div>
     </div>
 
+    <div class="mobile-row">
+        <div class = "headers-mobile header-text">
+            {% trans "Completed" %}
+        </div>
+        <div class="header-text">
+            {% include 'orders/partials/completed_indciator.html' %}
+        </div>
+    </div>
+    <div class="mobile-row">
+        <div class = "headers-mobile header-text">
+        {% trans "Withdraw Address" %}
+        </div>
 
-    <div class="header-text">
-        {%  include 'orders/partials/forms/withdraw_address_widget.html' %}
+        {%  if order.is_buy %}
+        <div class="header-text">
+            {%  include 'orders/partials/forms/withdraw_address_widget.html' %}
+        </div>
+        {% else %}
+            <div class="header-text">
+                {{ order.payment_preference.payment_method.name }}:
+                {{ order.payment_preference.identifier }}
+            </div>
+        {% endif %}
     </div>
 </div>
