--- a/templates/orders/partials/forms/payment_toggle.html
+++ b/templates/orders/partials/forms/payment_toggle.html
@@ -12,7 +12,7 @@
             data-pk="{{order.pk}}"
             data-offstyle="danger"
             data-onstyle="success"
-            {% if order.status >= order.PAID %}
+            {% if order.status in order.IN_PAID or order.user_marked_as_paid %}
                 checked
             {% endif %}
             {% if order.frozen %}
